--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="build/d3Temlate.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="/build/css/d3V4.css">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <title>d3.jsV4</title>
 </head>
 <body>
-    
+    <p>heloow</p>
+    <script src="/build/js/d3V4.js"></script>
 </body>
 </html>
